syntax = "proto3";

import "google/protobuf/empty.proto";
import "telemetry/messages/user_action.proto";

option java_multiple_files = true;
option java_package = "stats.service.collector";
option java_outer_classname = "CollectorControllerOuterClass";
package stats.service.collector;

service UserActionController {
  rpc CollectUserAction (telemetry.message.user.UserActionProto) returns (google.protobuf.Empty);
}